my-test/testsuite_scan/ir/SingleSource/UnitTests/2002-12-13-MishaTest.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/2002-12-13-MishaTest.c:3:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    3 | sum(to, from, count)
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/2002-12-13-MishaTest.c:3:1: warning: a function definition without a prototype is deprecated in all versions of C and is not supported in C23 [-Wdeprecated-non-prototype]
1 warning and 1 error generated.
